apply fixes to field feedback