@@ -9,16 +9,15 @@ import java.util.List;
 import org.joda.time.DateTime;
 
 import com.takipi.api.client.ApiClient;
-import com.takipi.api.client.data.transaction.Transaction;
+import com.takipi.api.client.data.transaction.Stats;
 import com.takipi.api.client.data.transaction.TransactionGraph;
 import com.takipi.api.client.data.transaction.TransactionGraph.GraphPoint;
 import com.takipi.common.util.Pair;
-import com.takipi.integrations.grafana.input.EventFilterInput;
 import com.takipi.integrations.grafana.input.TransactionsGraphInput;
-import com.takipi.integrations.grafana.util.TimeUtil;
 
 public class TransactionAvgGraphFunction extends TransactionsGraphFunction
 {
+
 	public static class Factory implements FunctionFactory {
 
 		@Override
@@ -42,35 +41,68 @@ public class TransactionAvgGraphFunction extends TransactionsGraphFunction
 		super(apiClient);
 	}
 	
+	
 	@Override
-	protected Collection<TransactionGraph> getTransactionGraphs(EventFilterInput input, String serviceId,
-			String viewId, Pair<DateTime, DateTime> timeSpan, String searchText, 
-			int pointsWanted, int activeTimespan, int baselineTimespan)
-	{	
-		Collection<Transaction> transactions = getTransactions(serviceId, viewId, timeSpan, input, searchText);
+	protected Collection<TransactionGraph> getTransactionsGraphs(String serviceId, 
+			String viewId, Pair<DateTime, DateTime> timeSpan, TransactionsGraphInput
+			input, int pointsWanted) {
+				
+		Collection<TransactionGraph> transactionGraphs = super.getTransactionsGraphs(serviceId, viewId, timeSpan, input, pointsWanted);
 		
-		if (transactions == null) {
+		if (transactionGraphs == null) {
 			return Collections.emptyList();
 		}
 		
 		List<TransactionGraph> result = new ArrayList<TransactionGraph>();
 		
-		for (Transaction transaction : transactions) {
-			TransactionGraph transactionGraph = new TransactionGraph();
-			transactionGraph.name = transaction.name;
+		for (TransactionGraph transactionGraph : transactionGraphs) {
+				
+			if (transactionGraph.points.size() == 0) {
+				continue;
+			}
+			
+			double value = 0;
+			long sum = 0;
+			
+			for (GraphPoint gp : transactionGraph.points) {
+				value += gp.stats.avg_time * gp.stats.invocations;
+				sum += gp.stats.invocations;
+			}
+			
+			double avg;
+			
+			if (sum > 0) {
+				avg = value / sum;
+			} else {
+				avg = 0;
+			}
+			
+			TransactionGraph avgGraph = new TransactionGraph();
+			
+			avgGraph.name = transactionGraph.name;
+			avgGraph.class_name = transactionGraph.class_name;
+			avgGraph.method_name = transactionGraph.method_name;
+			avgGraph.method_desc = transactionGraph.method_desc;
+										
+			Stats stats = new Stats();
+			
+			stats = new Stats();
+			stats.avg_time = avg;
+			stats.invocations = sum;
 			
 			GraphPoint p1 = new GraphPoint();
-			p1.time = TimeUtil.toString(timeSpan.getFirst());
-			p1.stats = transaction.stats;
-			
+			p1.time = transactionGraph.points.get(0).time;
+			p1.stats = stats;
+
 			GraphPoint p2 = new GraphPoint();
-			p2.time = TimeUtil.toString(timeSpan.getSecond());
-			p2.stats = transaction.stats;
+			p2.time = transactionGraph.points.get(transactionGraph.points.size() - 1).time;
+			p2.stats = stats;
 			
-			transactionGraph.points = Arrays.asList(new GraphPoint[] {p1, p2});
-			result.add(transactionGraph);
+			avgGraph.points = Arrays.asList(new GraphPoint[] {p1, p2});
+			result.add(avgGraph);
 		}
 		
 		return result;
 	}
+	
 }
